[package]
name = "duration-conf"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Wyatt Jacob Herkamp <wherkamp@gmail.com>"]
repository = "https://github.com/wyatt-herkamp/digestible"
edition = "2021"
[dependencies]
chrono = { version = "0.4", optional = true }
time = { version = "0.3", optional = true }
serde = "1"
chumsky = "1.0.0-alpha.7"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1"

tracing = { version = "0.1", optional = true }

[dev-dependencies]
serde_json = "1"
toml = "0.8"
anyhow = "1"
pretty_assertions = { version = "1" }
serde = { version = "1", features = ["derive"] }
[features]
default = ["time", "chrono"]
